Updates to tech report

--- a/doc/techrep/sling.bib
+++ b/doc/techrep/sling.bib
@@ -72,7 +72,7 @@
   title     = {Frame semantics},
   journal   = {Linguistics in the Morning Calm},
   year      = {1982},
-  pages     = {111-138},
+  pages     = {111--138},
   organization = {Linguistics Society of Korea},
   publisher = {Hanshin Publishing Company},
   address   = {Seoul},
@@ -101,5 +101,21 @@
   volume={34},
   year={2006},
   publisher={Springer}
+}
+
+@inproceedings{finkel2006,
+  title={Solving the problem of cascading errors: Approximate Bayesian inference for linguistic annotation pipelines},
+  author={Jenny Rose Finkel and Christopher D. Manning and Andrew Y. Ng},
+  booktitle={Proceedings of the 2006 Conference on Empirical Methods in Natural Language Processing},
+  pages={618--626},
+  year={2006},
+  organization={Association for Computational Linguistics}
+}
+
+@book{toutanova2005,
+  title={Effective statistical models for syntactic and semantic disambiguation},
+  author={Kristina Nikolova Toutanova and Christopher D. Manning},
+  year={2005},
+  publisher={stanford university}
 }
 
