--- a/doc/techrep/sling.bib
+++ b/doc/techrep/sling.bib
@@ -16,46 +16,7 @@
 }
 
 @article{tensorflow,
-  author    = {Mart{\'{\i}}n Abadi and
-               Ashish Agarwal and
-               Paul Barham and
-               Eugene Brevdo and
-               Zhifeng Chen and
-               Craig Citro and
-               Gregory S. Corrado and
-               Andy Davis and
-               Jeffrey Dean and
-               Matthieu Devin and
-               Sanjay Ghemawat and
-               Ian J. Goodfellow and
-               Andrew Harp and
-               Geoffrey Irving and
-               Michael Isard and
-               Yangqing Jia and
-               Rafal J{\'{o}}zefowicz and
-               Lukasz Kaiser and
-               Manjunath Kudlur and
-               Josh Levenberg and
-               Dan Man{\'{e}} and
-               Rajat Monga and
-               Sherry Moore and
-               Derek Gordon Murray and
-               Chris Olah and
-               Mike Schuster and
-               Jonathon Shlens and
-               Benoit Steiner and
-               Ilya Sutskever and
-               Kunal Talwar and
-               Paul A. Tucker and
-               Vincent Vanhoucke and
-               Vijay Vasudevan and
-               Fernanda B. Vi{\'{e}}gas and
-               Oriol Vinyals and
-               Pete Warden and
-               Martin Wattenberg and
-               Martin Wicke and
-               Yuan Yu and
-               Xiaoqiang Zheng},
+  author    = {Mart{\'{\i}}n Abadi and others},
   title     = {TensorFlow: Large-Scale Machine Learning on Heterogeneous Distributed
                Systems},
   journal   = {CoRR},
@@ -119,3 +80,9 @@
   publisher={stanford university}
 }
 
+@article{mikolov2013,
+  title={Efficient estimation of word representations in vector space},
+  author={Tomas Mikolov and Kai Chen and Greg Corrado and Jeffrey Dean},
+  journal={arXiv preprint arXiv:1301.3781},
+  year={2013}
+}
