--- a/doc/techrep/sling.tex
+++ b/doc/techrep/sling.tex
@@ -6,10 +6,15 @@
 \usepackage{amsmath}
 \usepackage{float}
 
+\usepackage{svg}
+
+% Please remember to include --shell-escape when using pdflatex
+
 \floatstyle{boxed}
 \restylefloat{figure}
 
-\aclfinalcopy
+%\aclfinalcopy
+\def\confidential{Draft copy.  DO NOT DISTRIBUTE.}
 
 \title{SLING: A framework for frame semantic parsing}
 
@@ -18,13 +23,11 @@ Michael Ringgaard \\ Google Inc. \\ {\tt ringgaard@google.com} \\\And
 Rahul Gupta \\ Google Inc. \\ {\tt grahul@google.com} \\
 }
 
-\date{}
-
 \begin{document}
 \maketitle
 
 \begin{abstract}
-This technical report describes SLING, which is a framework for building
+This paper describes SLING, which is a framework for building
 parsers for annotating text with semantic frames.
 The parser is a general transition-based frame semantic parser using
 bi-directional LSTMs for input encoding and a Transition Based Recurrent
@@ -87,19 +90,32 @@ trees.
 We use a recurrent feed-forward unit for predicting the actions in the
 transition sequence, where the hidden activations from precting each transition
 step is feed back into the subsequent steps.
-We use a bidirectional LSTM for encoding the input, where we have both a
-left-to-right and a right-to-left LSTM. This neural network architecture
-has been implemented using DRAGNN \cite{dragnn} and Tensorflow \cite{tensorflow}.
+A bidirectional LSTM is used for encoding the input, where we have both a
+left-to-right and a right-to-left LSTM, see Figure~\ref{fig:network}.
+This neural network architecture has been implemented using DRAGNN \cite{dragnn}
+and Tensorflow \cite{tensorflow}.
 
 We have made the SLING parsing framework available as open source and the code
 for the parser described in this paper can be found on GitHub.\footnote{\url{https://github.com/google/sling}}
 
 In Section~\ref{sec:framesem} we introduce \emph{frame semantics}, which is the
 underlying linguistic theory, as well as the SLING frame store, which is our
-C++ framework for repesenting, storing, inspecting, manipulating, and
-transporting semantic frames compactly and efficiently.
+C++ framework for repesenting and storing semantic frames compactly and
+efficiently.
 Section~\ref{sec:ts} describes the transition system used for producing the
 frame graphs and Section~\ref{sec:features} describes the features used by the parser.
+
+\begin{figure*}[t]
+  \centering
+  \includesvg{network}
+  \caption{Neural network architecture for SLING parser. The input is encoded by
+  a bi-directional LSTM and the LSTM encoding is then feed into a recurrent
+  feed-forward (FF) unit which predicts the actions for the transition system.
+  The hidden layer activations as well as the transition system state is used
+  for constructing the input feature vector for the next step. The FF unit is
+  run repeatedly until the transition system has reached a terminal state.}
+  \label{fig:network}
+\end{figure*}
 
 \section{Frame semantics}
 \label{sec:framesem}
@@ -141,8 +157,14 @@ tracks the all the frames that have been allocated in the store, and serves as a
 memory allocation arena for the allocated frames. When making a new frame, you
 specify the store that the frame should be allocated in. The frame will live in
 this store until its store is deleted or the frame is garbage collected because
-there are no references to it.\footnote{See the \href{https://github.com/google/sling/blob/master/frame/README.md}{SLING Guide}
+there are more no references to it.\footnote{See the \href{https://github.com/google/sling/blob/master/frame/README.md}{SLING Guide}
 for a detailed description of the SLING frame store implementation.}
+
+The SLING text format is a superset of JSON that allows you to have references
+between frames (i.e. JSON objects) using the {\tt \#n} syntax. The frames can be
+assigned ids using the {\tt=\#n} syntax. SLING frames can have both numeric and
+named ids. Where JSON objects can only represent trees, SLING frames can be used
+for representing arbitrary graphs.
 
 Documents are also represented using frames, where the document frame has slots
 for the document text, the tokens, and the mention phrases and the frames they
@@ -150,6 +172,7 @@ evoke. See Figure~\ref{fig:slingdoc} for an example.
 
 \begin{figure*}[t]
   \begin{verbatim}
+{
   :/s/document
   /s/document/text: "John hit the ball"
   /s/document/tokens: [
@@ -174,6 +197,7 @@ evoke. See Figure~\ref{fig:slingdoc} for an example.
     :/s/phrase /s/phrase/begin: 3
     /s/phrase/evokes: {=#2 :/s/consumer_good }
   }
+}
 \end{verbatim}
   \caption{The text "John hit the ball" in SLING frame notation. The document
   itself is represented by a frame that has the text, an array of tokens and
@@ -200,8 +224,8 @@ evoked by phrases in the input. Instead of using a stack, we have an
 \emph{attention buffer}, which keeps track of the most salient frames in the
 discourse. The front of the attention buffer serves as the short-term memory of
 the parser and the parser actions operate on these frames. The actions in the
-transition system both builds up the frame graph as well as maintaining the
-attention buffer.
+transition system both builds up the frame graph as well as maintains the
+attention buffer. The transition system consists of the following actions:
 
 \begin{itemize}
   \item {\bf SHIFT} -- Skips the next input token. Only valid when not at the
@@ -233,9 +257,15 @@ attention buffer.
         becomes the new center of attention.
 \end{itemize}
 
-This transition system can generate any connected frame graph, where the frames
+This transition system can generate any connected frame graph where the frames
 are either directly on indirectly evoked by mention phrases in the text. A frame
 can be evoked by multiple mentions and the graph can have cycles.
+
+The transition system can potentially have an unbounded number of actions since
+it is parameterized by phrase length and attention buffer indices with can be
+arbitrarily large, so in the current implementation, we only consider the
+top $k$ frames in the attention buffer $(k=5)$ and do not consider phrases
+longer than those in the training copus.
 
 Multiple transition sequences can generate the same frame annotations, but we
 have implemented an oracle sequence generator that takes a sentence and converts
