Add section on attention to paper

--- a/doc/techrep/sling.bib
+++ b/doc/techrep/sling.bib
@@ -86,3 +86,40 @@
   journal={arXiv preprint arXiv:1301.3781},
   year={2013}
 }
+
+@book{graziano2013,
+  title={Consciousness and the Social Brain},
+  author={Michael S.A. Graziano},
+  isbn={9780199928644},
+  lccn={2012048895},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
+@article{nelson2017,
+  title={Neurophysiological dynamics of phrase-structure building during sentence processing},
+  author={Matthew J. Nelson and and others},
+  journal={Proceedings of the National Academy of Sciences},
+  pages={201701590},
+  year={2017},
+  publisher={National Acad Sciences}
+}
+
+@inproceedings{ontonotes2006,
+  title={OntoNotes: The 90\% Solution.},
+  author={Sameer S. Pradhan and Nianwen Xue},
+  booktitle={HLT-NAACL (Tutorial Abstracts)},
+  pages={11--12},
+  year={2009}
+}
+
+@article{palmer2005,
+  title={The proposition bank: An annotated corpus of semantic roles},
+  author={Martha Palmer and Daniel Gildea and Paul Kingsbury},
+  journal={Computational linguistics},
+  volume={31},
+  number={1},
+  pages={71--106},
+  year={2005},
+  publisher={MIT Press}
+}
