--- a/doc/report/sling.tex
+++ b/doc/report/sling.tex
@@ -16,7 +16,7 @@
 \floatstyle{boxed}
 \restylefloat{figure}
 
-%\aclfinalcopy
+\aclfinalcopy
 \def\confidential{DRAFT COPY.  DO NOT DISTRIBUTE.}
 
 \title{SLING: A framework for frame semantic parsing}
@@ -32,7 +32,7 @@ Rahul Gupta \\ Google Inc. \\ {\tt grahul@google.com} \\
 \begin{abstract}
 This paper describes SLING, which is a framework for building
 parsers for annotating text with semantic frames.
-The parser is a general transition-based frame semantic parser using
+The parser is a general transition-based frame semantic parser that uses
 bi-directional LSTMs for input encoding and a Transition Based Recurrent
 Unit (TBRU) for output decoding.
 It is a jointly trained model using only the text tokens as input and the
@@ -47,7 +47,7 @@ on GitHub.
 
 \section{Introduction}
 
-Recent advances in machines learning has enabled us to use deep learning to
+Recent advances in machines learning have enabled the use of deep learning to
 train recurrent multi-level neural network classifiers. This has allowed us to
 reconsider how to best design and implement systems for natural language
 understanding (NLU).
@@ -56,7 +56,7 @@ Traditionally, natural language processing (NLP) systems have used a cascade of
 NLP modules for syntatic and semantic annotation of text.
 These systems typically first do part-of-speech (POS) tagging, followed by
 constituency or dependency parsing for syntactic analysis.
-Using the POS tags and parse trees as feature inputs, you could then do other
+Using the POS tags and parse trees as feature inputs, one could then do other
 NLP tasks like mention chunking, entity type tagging, coreference resolution,
 semantic role labeling (SRL), etc.
 
@@ -77,22 +77,24 @@ Classic NLP systems are also often trained using linear classifiers.
 Because of the simplicity of these, very complex and elaborate feature
 extraction with many different types of features as well as many kinds
 of combinations of these features are often required for good accuracy.
-With deep learning you can use embeddings, multiple layers, and recurrent
-network connections instead, and this will often remove the need for complex
-feature designs. The internal learned representations in the hidden layers of
+With deep learning one can use embeddings, multiple layers, and recurrent
+network connections instead, and this often removes the need for complex
+feature design. The internal learned representations in the hidden layers of
 the models can be used instead of the hand-crafted intermediate representations
 in pipelined systems.
 
-To address these problems, we have made the SLING parser. It is a
-transition-based parser that outputs frame graphs directly without any
+
+We present the SLING parser that leverages deep learning to bypass the some of
+the limitations of classic pipelined systems.
+It is a transition-based parser that outputs frame graphs directly without any
 intervening symbolic representation (see Section~\ref{sec:ts}). Transition-based
 parsing is often associated with dependency parsing, but we have designed a
 specialized transition system that outputs frame graphs instead of dependency
 trees.
 
 We use a recurrent feed-forward unit for predicting the actions in the
-transition sequence, where the hidden activations from precting each transition
-step is feed back into the subsequent steps.
+transition sequence, where the hidden activations from predicting each
+transition step are fed back into the subsequent steps.
 A bidirectional LSTM is used for encoding the input, where we have both a
 left-to-right and a right-to-left LSTM, see Figure~\ref{fig:network}.
 This neural network architecture has been implemented using DRAGNN \cite{dragnn}
@@ -103,10 +105,12 @@ for the parser described in this paper can be found on GitHub.\footnote{\url{htt
 
 In Section~\ref{sec:framesem} we introduce \emph{frame semantics}, which is the
 underlying linguistic theory, as well as the SLING frame store, which is our
-C++ framework for repesenting and storing semantic frames compactly and
+C++ framework for representing and storing semantic frames compactly and
 efficiently.
+Section \ref{sec:att} introduces our attention mechanism and
 Section~\ref{sec:ts} describes the transition system used for producing the
-frame graphs and Section~\ref{sec:features} describes the features used by the parser.
+frame graphs. Section~\ref{sec:features} describes the features used by the
+parser.
 
 \begin{figure*}[t]
   \centering
@@ -129,7 +133,7 @@ theory of linguistic meaning developed by Charles Fillmore \cite{fillmore1982}.
 Frame semantics connects linguistic semantics to encyclopedic knowledge and the
 central idea is that understanding the meaning of a word requires access to all
 the essential knowledge that relates to that word. A word \emph{evokes} a frame
-repesenting the specific concept it refers to.
+representing the specific concept it refers to.
 
 A semantic frame is a set of facts that specify "characteristic
 features, attributes, and functions of a denotatum, and its characteristic
@@ -145,6 +149,9 @@ for constructing knowledge bases of world knowledge and common sense, and frame
 semantics can also form the basis for reasoning about metaphors, metonymy,
 actions, perspective, etc.
 
+\section{Frame in SLING}
+\label{sec:slingframes}
+
 At a more technical level, a SLING frame consists of a list of slots, where each
 slot has a name (role) and a value. The slot values can be literals like numbers
 and strings, or links to other frames. The frames essentially form a graph where
@@ -157,9 +164,9 @@ database.
 
 SLING frames live inside a \emph{frame store}. A store is a container that
 tracks the all the frames that have been allocated in the store, and serves as a
-memory allocation arena for the allocated frames. When making a new frame, you
-specify the store that the frame should be allocated in. The frame will live in
-this store until its store is deleted or the frame is garbage collected because
+memory allocation arena for the allocated frames. When making a new frame, one
+specifies the store that the frame should be allocated in. The frame will live in
+this store until the store is deleted or the frame is garbage collected because
 there are more no references to it.\footnote{See the \href{https://github.com/google/sling/blob/master/frame/README.md}{SLING Guide}
 for a detailed description of the SLING frame store implementation.}
 
@@ -215,7 +222,7 @@ evoke. See Figure~\ref{fig:slingdoc} for an example.
   }
 }
 \end{verbatim}
-  \caption{The text "John hit the ball" in SLING frame notation. The document
+  \caption{The text ``John hit the ball" in SLING frame notation. The document
   itself is represented by a frame that has the text, an array of tokens and
   the mentions that evoke frames. There are three frames: a person frame (John),
   a consumer good frame (bat) and a hit-01 frame. The hit frame has the person
@@ -243,7 +250,7 @@ recent neuroscience research in attention and awareness in the brain
 \cite{nelson2017} and \cite{graziano2013}.
 Our attention model is expressed in terms of the semantic frames inferred from
 the text so far.
-This is different from neural attention models in sequence-to-sequence models
+This is different from neural attention in sequence-to-sequence models
 since we model attention in terms of semantic frames evoked from the text rather
 than (encodings of) the text itself.
 
@@ -261,7 +268,7 @@ attention in order to build up the desired frame graph.
 \section{Transition system}
 \label{sec:ts}
 
-In the parsing litteratur, \emph{transition systems} have been
+In the parsing literature, \emph{transition systems} have been
 used to construct dependency parse trees from a sequence of state-action pairs
 $(s_i,a_i)$. A transition system takes a state $s_i$ and an action $a_i$ and
 constructs a new state $s_{i+1}$. This allows you to build a tree structure by
@@ -279,14 +286,15 @@ transition system both builds up the frame graph as well as maintains the
 attention buffer. The transition system consists of the following actions:
 
 \begin{itemize}
-  \item {\bf SHIFT} -- Skips the next input token. Only valid when not at the
+  \item {\bf SHIFT} -- Moves to next input token. Only valid when not at the
         end of the input buffer.
   \item {\bf STOP} -- Signals that we have reach the end of the parse. This is
         only valid when at the end of the input buffer. Multiple STOP actions
         can be added to the transition sequence, e.g. to make all sequences in a
-        beam have the same length.
+        beam have the same length. After a STOP is issued, no other actions are
+        permitted except more STOP actions.
   \item {\bf EVOKE(type, n)} -- Evokes frame of with type {\bf type} from
-        the next {\bf n} tokens in the input. The new frame will become the
+        the next {\bf n} tokens in the input. The evoked frame becomes the new
         center of attention.
   \item {\bf REFER(frame, n)} -- Makes a new mention of the next {\bf n} tokens
         in the input evoking an existing frame in the attention buffer. This
@@ -308,6 +316,10 @@ attention buffer. The transition system consists of the following actions:
         becomes the new center of attention.
 \end{itemize}
 
+In summary, {\bf EVOKE} and {\bf REFER} are used to evoke frames from text
+mentions, while {\bf ELABORATE} and {\bf EMBED} are used to create frames not
+directly evoked by text.
+
 This transition system can generate any connected frame graph where the frames
 are either directly on indirectly evoked by mention phrases in the text. A frame
 can be evoked by multiple mentions and the graph can have cycles.
@@ -319,10 +331,10 @@ top $k$ frames in the attention buffer $(k=5)$ and do not consider phrases
 longer than those in the training copus.
 
 Multiple transition sequences can generate the same frame annotations, but we
-have implemented an oracle sequence generator that takes a sentence and converts
-it to a canonical transition sequence in a similar way to how this is done
+have implemented an oracle sequence generator that takes a document and converts
+it to a canonical transition sequence in a way similar to how this is done
 for transition-based dependency parsing \cite{nivre2006}, e.g. the sentence
-"John hit the ball" will generate the following transition sequence:
+``John hit the ball" will generate the following transition sequence:
 \begin{verbatim}
   EVOKE(/s/person, 1)
   SHIFT
@@ -340,35 +352,38 @@ for transition-based dependency parsing \cite{nivre2006}, e.g. the sentence
 The LSTMs only uses lexical features based on the current input word:
 
 \begin{itemize}
-  \item The current word is mapped through pre-trained word embeddings
-  \cite{mikolov2013} for all the words known in the vocabulary from the
-  training data.
-  \item The prefixes and suffixes of the current input word. Currently only
-  prefixes up to three characters are used.
+  \item The current word itself. During training we initialize the embeddings
+  for this feature with pre-trained word embeddings \cite{mikolov2013} for all
+  the words in the vocabulary collected from the training data.
+  \item The prefixes and suffixes of the current input word. We only use
+  prefixes up to three characters in our experiments.
   \item Word shape features based on the characters in the current input word:
-  hyphenation, capitalization, punctuation, quotes, and digits.
+  hyphenation, capitalization, punctuation, quotes, and digits. Each of these
+  features has its own embedding matrix.
 \end{itemize}
 
-The feed-forward unit takes the hidden activation from the LSTMs as well as the
-activations in the hidden layer of the feed-forward unit from the previous steps
-as input features and uses these to compute the following input features:
+The TBRU is a simple feed-forward unit with a single hidden layer.
+It takes the hidden activations from the LSTMs as well as the activations from
+the hidden layer from the previous steps as raw input features, and maps them
+through embedding matrices to get the input vector for the  hidden layer. The
+raw input features used are:
 
 \begin{itemize}
   \item The hidden activations from the left-to-right and right-to-left LSTMs
   for the current token in the parser state.
   \item The attention feature looks at the top-5 frames in the attention buffer
-  and tracks the phrases in the text that evoked them. The activations from the
-  left-to-right and right-to-left LSTMs for the end token in these phrase are
-  added as input features. These serve as the lexical representation of the top
-  frames in the attention buffer.
-  \item The transition steps which evoked or re-evoked the top-5 frames in the
-  attention buffer are used as the semantic context representation for these
-  frames. The hidden activations in the feed-forward unit at these steps are
-  input as features to the current step in the feed-forward unit.
+  and finds the phrases in the text (if any) that evoked them. The activations
+  from the left-to-right and right-to-left LSTMs for the last token in these
+  phrases are used as input features. These serve as the continuous lexical
+  representations of the top frames in the attention buffer.
+  \item The hidden layer activations of the transition steps which evoked or
+  brought into focus the top-5 frames in the attention buffer. These serves as a
+  continuous representation of the semantic context for these frames, i.e. a
+  representation of the state when these frames were evoked most recently.
   \item The history feature uses the hidden activations in the feed-forward
-  unit from the previous five step as feature inputs to the current step.
+  unit from the previous five steps as feature inputs to the current step.
   \item The roles features extract the role edges between the top-5 frames in
-  the attention buffer. These are triples of the form $(s_i, r_i, t_i)$ meaining
+  the attention buffer. These are triples of the form $(s_i, r_i, t_i)$ meaning
   that the frame at position $s_i$ in the attention buffer has a role $r_i$ with
   the frame at position $t_i$ in the attention buffer as its value. Back-off
   features are added for the source roles $(s_i,r_i)$, target role $(r_i, t_i)$,
@@ -408,7 +423,7 @@ Myelin is a neural network JIT compiler...
 At training time, we use Tensorflow for computing and updating the neural
 network.
 
-\section{Furture work}
+\section{Future work}
 
 % Cascading action classifier to speed up computations of logits... TBD
 
