Add link to slides with figures

--- a/doc/report/sling.tex
+++ b/doc/report/sling.tex
@@ -13,10 +13,13 @@
 % sudo apt-get install inkscape
 % pdflatex --shell-escape sling
 
+% Figures:
+% https://docs.google.com/a/ringgaard.com/presentation/d/1QlQnyeG5UbUDEi2x9rxxjCXRQ1Qz9qjaTz__NWX-n8o/edit?usp=sharing
+
 \floatstyle{boxed}
 \restylefloat{figure}
 
-\aclfinalcopy
+%\aclfinalcopy
 \def\confidential{DRAFT COPY.  DO NOT DISTRIBUTE.}
 
 \title{SLING: A framework for frame semantic parsing}
