--- a/doc/report/sling.tex
+++ b/doc/report/sling.tex
@@ -18,7 +18,7 @@
 
 \restylefloat{figure}
 
-%\aclfinalcopy
+\aclfinalcopy
 \def\confidential{DRAFT COPY.  DO NOT DISTRIBUTE.}
 
 \title{SLING: A framework for frame semantic parsing}
