Fixed typo in SLING paper

--- a/doc/report/sling.tex
+++ b/doc/report/sling.tex
@@ -232,7 +232,7 @@ evoke. See Figure~\ref{fig:slingdoc} for an example.
 \caption{The text ``John hit the ball" in SLING frame notation. The document
 itself is represented by a frame that has the text, an array of tokens and
 the mentions that evoke frames. There are three frames: a person frame (John),
-a consumer good frame (bat) and a hit-01 frame. The hit frame has the person
+a consumer good frame (ball) and a hit-01 frame. The hit frame has the person
 frame as the agent (arg0) and the ball frame as the object (arg1).}
 \label{fig:slingdoc}
 \end{figure*}
